Bug 722 - missing weak aliases for setres{g,u}id in sysdeps/mach/hurd
Summary: missing weak aliases for setres{g,u}id in sysdeps/mach/hurd
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: hurd (show other bugs)
Version: 2.3.2
: P1 normal
Target Milestone: ---
Assignee: Roland McGrath
URL:
Keywords:
Depends on:
Blocks: libc235
  Show dependency treegraph
 
Reported: 2005-02-15 01:58 UTC by Barry deFreese
Modified: 2005-04-05 23:59 UTC (History)
1 user (show)

See Also:
Host: i386-pc-gnu
Target: i386-pc-gnu
Build: i386-pc-gnu
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Barry deFreese 2005-02-15 01:58:06 UTC
2005-02-10  Barry deFrese  <bddebian@comcast.net>

	* sysdeps/mach/hurd/setresgid.c: Add weak alias.

	* sysdeps/mach/hurd/setresuid.c: Add weak alias.


diff -urp build-tree.old/glibc-2.3.2/sysdeps/mach/hurd/setresgid.c
build-tree/glibc-2.3.2/sysdeps/mach/hurd/setresgid.c
--- build-tree.old/glibc-2.3.2/sysdeps/mach/hurd/setresgid.c	2005-02-10
10:28:25.000000000 -0500
+++ build-tree/glibc-2.3.2/sysdeps/mach/hurd/setresgid.c	2005-02-10
10:23:10.000000000 -0500
@@ -75,3 +75,4 @@ __setresgid (gid_t egid, gid_t rgid, gid
   return err;
 }
 libc_hidden_def (__setresgid)
+weak_alias (__setresgid, setresgid)
diff -urp build-tree.old/glibc-2.3.2/sysdeps/mach/hurd/setresuid.c
build-tree/glibc-2.3.2/sysdeps/mach/hurd/setresuid.c
--- build-tree.old/glibc-2.3.2/sysdeps/mach/hurd/setresuid.c	2005-02-10
10:28:25.000000000 -0500
+++ build-tree/glibc-2.3.2/sysdeps/mach/hurd/setresuid.c	2005-02-10
10:23:10.000000000 -0500
@@ -75,3 +75,4 @@ __setresuid (uid_t euid, uid_t ruid, uid
   return err;
 }
 libc_hidden_def (__setresuid)
+weak_alias (__setresuid, setresuid)
Comment 1 Sourceware Commits 2005-02-15 03:08:45 UTC
Subject: Bug 722

CVSROOT:	/cvs/glibc
Module name:	libc
Changes by:	roland@sources.redhat.com	2005-02-15 03:08:39

Modified files:
	sysdeps/mach/hurd: setresuid.c setresgid.c 

Log message:
	2005-02-11  Barry deFrese  <bddebian@comcast.net>
	
	[BZ #722]
	* sysdeps/mach/hurd/setresgid.c: Use weak_alias.
	* sysdeps/mach/hurd/setresuid.c: Likewise.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/sysdeps/mach/hurd/setresuid.c.diff?cvsroot=glibc&r1=1.1&r2=1.2
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/sysdeps/mach/hurd/setresgid.c.diff?cvsroot=glibc&r1=1.1&r2=1.2

Comment 2 Sourceware Commits 2005-02-18 00:08:31 UTC
Subject: Bug 722

CVSROOT:	/cvs/glibc
Module name:	libc
Branch: 	glibc-2_3-branch
Changes by:	roland@sources.redhat.com	2005-02-18 00:08:18

Modified files:
	sysdeps/mach/hurd: setresuid.c setresgid.c 

Log message:
	2005-02-11  Barry deFrese  <bddebian@comcast.net>
	
	[BZ #722]
	* sysdeps/mach/hurd/setresgid.c: Use weak_alias.
	* sysdeps/mach/hurd/setresuid.c: Likewise.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/sysdeps/mach/hurd/setresuid.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.1&r2=1.1.4.1
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/sysdeps/mach/hurd/setresgid.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.1&r2=1.1.4.1

Comment 3 Roland McGrath 2005-04-05 23:59:22 UTC
These changes are in the 2.3 branch as well as the trunk now.