[BZ #722]

2005-02-11  Barry deFrese  <bddebian@comcast.net>
	[BZ #722]
	* sysdeps/mach/hurd/setresgid.c: Use weak_alias.
	* sysdeps/mach/hurd/setresuid.c: Likewise.